# flightmech

./: README.md  main.py  pyproject.toml
data/: fx63-137  polare_NACA_63-2012.csv
data/polare/: NACA_4309_flaps_5  naca_2313.csv  naca_2313_flaps_5.csv  naca_2313_flaps_7.5.csv  naca_2315_flaps_10.csv  naca_2315_flaps_5.csv  polare_NACA_63-2012.csv  polare_naca_4309.csv
flightmech/: aircraft.py  basemodel.py  constants.py  propeller.py  propulsion.py  utils.py
notebooks/: airfoil.ipynb  energy_analysis.ipynb  horizontalflug.ipynb
notebooks/.ipynb_checkpoints/: horizontalflug-checkpoint.ipynb
tests/: test_utils.py
