[tool.poetry]
name = "flightmech"
version = "0.1.0"
description = ""
authors = ["Andrés Arango Pérez <a.arango@tu-braunschweig.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
fluids = "^1.0.22"
pytest = "^7.1.3"
jupyter = "^1.0.0"
matplotlib = "^3.6.0"
ac = "^0.3-alpha"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

